# EDA

./: README.md
FM_Partitioning/: .gitignore  CMakeLists.txt  DesignDoc.MD  FMEngine.cpp  README.md  main.cpp  perf.md
FM_Partitioning/Algorithm/: FMEngine.cpp  FMEngine.h
FM_Partitioning/DataStructures/: GainBucket.cpp  GainBucket.h  Netlist.cpp  Netlist.h  PartitionState.cpp  PartitionState.h
FM_Partitioning/IO/: OutputGenerator.cpp  OutputGenerator.h  Parser.cpp  Parser.h
STA/: .gitignore  Makefile  circuit.hpp  compare_floats.awk  main.cpp  parser.cpp  perf.md  sta_tool  sta_validation_results.csv  test_validation.sh  validate.sh  validate_multi_benchmark.sh  validate_parser.sh  validate_phase0b.sh  validation.sh
STA/Assignment/: Asssignment.md
STA/Benchmarks/: c17.isc
STA/cleaned_iscas89_99_circuits/: benchmark  benchmark.cpp  cleaned_b15_1.isc  cleaned_b18_1.isc  cleaned_b22.isc  cleaned_c17.isc  cleaned_c1908_.isc  cleaned_c2670.isc  cleaned_c3540.isc  cleaned_c5315.isc  cleaned_c7552.isc  run_benchmarks.sh
STA/include/: Circuit.hpp  Constants.hpp  Debug.hpp  Gate.hpp  GateLibrary.hpp  Node.hpp  Utils.hpp  circuit.hpp  debug.hpp  libertyparser.hpp  library.hpp  netlistparser.hpp  parser.hpp  threadpool.hpp  timinganalyzer.hpp  timingbenchmark.hpp  tokenscanner.hpp
STA/ref/: Makefile  PA1Solution.cpp  PA1Solution_debug.cpp  README.md  Readme.txt  ckt_traversal.txt  libertyfile_1.hpp  run_tests.sh  soham_5618068_ee5301_PA1.cpp  sta
STA/ref/PA1/: Makefile  cktfile_1.hpp  nested_1.hpp
STA/ref/include/: CircuitNode.hpp  GateDatabase.hpp
STA/ref/mt_impl/: MultithreadedSTA.cpp  validation.sh
STA/ref/results/: b15_out.txt  c1908_out.txt  c2670_out.txt  c5315_out.txt  c7552_out.txt
STA/ref/src/: CircuitNode.cpp
STA/ref/test/: b19_1_args.txt  b22_args.txt  c1908_args.txt  c3540_args.txt  c7552_args.txt
STA/ref_instrumented/: Makefile  README.md  ckt_traversal.txt  run_tests.sh  sta
STA/ref_instrumented/include/: Circuit.hpp  instrumentation.hpp
STA/ref_instrumented/results/: b18_out.txt  b22_out.txt  c17_out.txt  c3540_out.txt
STA/ref_instrumented/src/: Circuit.cpp  GateDatabase.cpp  instrumentation.cpp  main.cpp
STA/ref_instrumented/test/: b15_1_args.txt  b18_1_args.txt  c2670_args.txt  c5315_args.txt
STA/src/: Circuit.cpp  Debug.cpp  Gate.cpp  GateLibrary.cpp  Node.cpp  Utils.cpp  circuit.cpp  debug.cpp  libertyparser.cpp  library.cpp  main.cpp  netlistparser.cpp  parser.cpp  timinganalyzer.cpp  validate_interpolation.cpp
